--- a/source/RockawayWish.Web/Views/Home/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Index.cshtml
@@ -3,17 +3,10 @@
 }
 @section stylesheets{
     <style type="text/css">
-        html { 
-          background: url('/content/img/home-bg2.jpg') no-repeat center center fixed; 
-          -webkit-background-size: cover;
-          -moz-background-size: cover;
-          -o-background-size: cover;
-          background-size: cover;
-        }
-        /*body { 
+        body { 
             background-image: url('/content/img/home-bg2.jpg'); 
             background-repeat: no-repeat; 
             background-size: 100% auto;
-        }*/
+        }
     </style>
 }
