--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -7,16 +7,16 @@
             <li data-target="#main-carousel" data-slide-to="2"></li>
         </ol><!--/.carousel-indicators-->
         <div class="carousel-inner">
-            <div class="item active" style="background-image: url(images/slider/Wish1_carousel.jpg)">
+            <div class="item active" style="background-image: url(images/slider/slide1.jpg)">
                 <div class="carousel-caption">
                     <div>
-                        <h2 class="heading animated bounceInDown">Rockaway WISH</h2>
+                        <h2 class="heading animated bounceInDown">WISH of Rockaway</h2>
                         <p class="animated bounceInUp">Women Inspired to Help and Suport</p>
                         <a class="btn btn-default slider-btn animated fadeIn" href="#about-us">Learn More</a>
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(images/slider/nycmarathon.jpg)">
+            <div class="item" style="background-image: url(images/slider/slide2.jpg)">
                 <div class="carousel-caption">
                     <div>
                         <h2 class="heading animated bounceInDown">NYC Marathon</h2>
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(images/slider/Wish_group.jpg)">
+            <div class="item" style="background-image: url(images/slider/slide3.jpg)">
                 @*<div class="carousel-caption">
                         <div>
                             <h2 class="heading animated bounceInRight">Fully Responsive Template</h2>
@@ -32,6 +32,15 @@
                             <a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a>
                         </div>
                     </div>*@
+            </div>
+            <div class="item" style="background-image: url(images/slider/slide4.jpg)">
+                @*<div class="carousel-caption">
+                <div>
+                    <h2 class="heading animated bounceInRight">Fully Responsive Template</h2>
+                    <p class="animated bounceInLeft">100% Responsive HTML template</p>
+                    <a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a>
+                </div>
+            </div>*@
             </div>
         </div><!--/.carousel-inner-->
 
