Revert "Update contact us info"
This reverts commit f14cb5e123f793c6da9a824d4527146771fbae44.

--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -7,7 +7,7 @@
             <li data-target="#main-carousel" data-slide-to="2"></li>
         </ol><!--/.carousel-indicators-->
         <div class="carousel-inner">
-            <div class="item active" style="background-image: url(images/slider/banner-1.jpg)">
+            <div class="item active" style="background-image: url(images/slider/Wish1_carousel.jpg)">
                 <div class="carousel-caption">
                     <div>
                         <h2 class="heading animated bounceInDown">Rockaway WISH</h2>
@@ -16,7 +16,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(images/slider/banner-2.jpg)">
+            <div class="item" style="background-image: url(images/slider/nycmarathon.jpg)">
                 <div class="carousel-caption">
                     <div>
                         <h2 class="heading animated bounceInDown">NYC Marathon</h2>
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(images/slider/banner-3.jpg)">
+            <div class="item" style="background-image: url(images/slider/Wish_group.jpg)">
                 @*<div class="carousel-caption">
                         <div>
                             <h2 class="heading animated bounceInRight">Fully Responsive Template</h2>
@@ -32,24 +32,6 @@
                             <a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a>
                         </div>
                     </div>*@
-            </div>
-            <div class="item" style="background-image: url(images/slider/banner-4.jpg)">
-                @*<div class="carousel-caption">
-                <div>
-                    <h2 class="heading animated bounceInRight">Fully Responsive Template</h2>
-                    <p class="animated bounceInLeft">100% Responsive HTML template</p>
-                    <a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a>
-                </div>
-            </div>*@
-            </div>
-            <div class="item" style="background-image: url(images/slider/banner-5.jpg)">
-                @*<div class="carousel-caption">
-                <div>
-                    <h2 class="heading animated bounceInRight">Fully Responsive Template</h2>
-                    <p class="animated bounceInLeft">100% Responsive HTML template</p>
-                    <a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a>
-                </div>
-            </div>*@
             </div>
         </div><!--/.carousel-inner-->
 
