--- a/source/RockawayWish.Web/Views/Shared/_ContactUs.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_ContactUs.cshtml
@@ -15,8 +15,7 @@
             <div class="row text-center clearfix">
                 <div class="col-sm-6">
                     <div class="contact-address">
-                        <address><p>WISH of Rockaway</p>
-                       <strong>533 Beach 126th Street<br>Belle Harbor, NY 11694</strong><br><small>email: info@rockawaywish.org</small></address>
+                        <address><p>Rockaway WISH</p>@*<strong>36 North Kafrul<br>Dhaka Cantonment Area<br> Dhaka-1206, Bangladesh</strong><br><small>( Lorem ipsum dolor sit amet, consectetuer adipiscing elit )</small>*@</address>
                         <div class="social-icons">
                             <a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
