--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -6,26 +6,45 @@
             <li data-target="#main-carousel" data-slide-to="1"></li>
             <li data-target="#main-carousel" data-slide-to="2"></li>
         </ol><!--/.carousel-indicators-->
-        <div class="carousel-inner">
-            <div class="item active" style="background-image: url(images/slider/slide1.jpg)">
-                <div class="carousel-caption">
-                    <div>
-                        <h2 class="heading animated bounceInDown">WISH of Rockaway</h2>
-                        <p class="animated bounceInUp">Women Inspired to Help and Suport</p>
-                        <a class="btn btn-default slider-btn animated fadeIn" href="#about-us">Learn More</a>
-                    </div>
+        <div class="carousel-inner" style="text-shadow: 4px 4px #000;">
+            <div class=" item active" style="background-image: url(images/slider/slide1.jpg)">
+            <div style="padding: 20px; position: absolute; z-index: 100; color: #fff; font-size: 100px; font-weight: bold; left: 100px; top: 175px;">
+                <div style="letter-spacing: 15px;"><span style="color: pink">W</span><span style="font-size: 50px;">omen</span></div>
+                <div style="padding-left: 10px">I</div>
+                <div>S</div>
+                <div>H</div>
+            </div>
+            <div class="carousel-caption">
+                <div>
+                    <h2 class="heading animated bounceInDown">WISH of Rockaway</h2>
+                    <p class="animated bounceInUp">Women Inspired to Help and Suport</p>
+                    <a class="btn btn-default slider-btn animated fadeIn" href="#about-us">Learn More</a>
                 </div>
             </div>
+        </div>
             <div class="item" style="background-image: url(images/slider/slide2.jpg)">
+                
                 <div class="carousel-caption">
                     <div>
                         <h2 class="heading animated bounceInDown">NYC Marathon</h2>
                         <p class="animated bounceInUp">Spots available for the New York City marathon. Come on ladies!</p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Learn More</a>
                     </div>
                 </div>
+                <div style="padding: 20px; position: absolute; z-index: 100; color: #fff; font-size: 100px; font-weight: bold; left: 100px; top: 175px;">
+                    <div>W</div>
+                    <div style="padding-left: 20px; letter-spacing: 10px"><span style="color: pink">I</span><span style="font-size: 50px;">nspired to</span></div>
+                    <div>S</div>
+                    <div>H</div>
+                </div>
             </div>
             <div class="item" style="background-image: url(images/slider/slide3.jpg)">
-                @*<div class="carousel-caption">
+                <div style="padding: 20px; position: absolute; z-index: 100; color: #fff; font-size: 100px; font-weight: bold; left: 100px; top: 175px;">
+                    <div>W</div>
+                    <div style="padding-left: 20px">I</div>
+                    <div style="letter-spacing: 10px;"><span style="color: pink">S</span><span style="font-size: 50px;">upport and</span></div>
+                    <div>H</div>
+                </div>
+               @*<div class="carousel-caption">
                         <div>
                             <h2 class="heading animated bounceInRight">Fully Responsive Template</h2>
                             <p class="animated bounceInLeft">100% Responsive HTML template</p>
@@ -34,6 +53,12 @@
                     </div>*@
             </div>
             <div class="item" style="background-image: url(images/slider/slide4.jpg)">
+                <div style="padding: 20px; position: absolute; z-index: 100; color: #fff; font-size: 100px; font-weight: bold; left: 100px; top: 175px; height: 500px;">
+                    <div>W</div>
+                    <div style="padding-left: 20px">I</div>
+                    <div>S</div>
+                    <div style="letter-spacing: 10px;"><span style="color: pink">H</span><span style="font-size: 50px;">elp</span></div>
+                </div>
                 @*<div class="carousel-caption">
                 <div>
                     <h2 class="heading animated bounceInRight">Fully Responsive Template</h2>
