update contact us info

--- a/source/RockawayWish.Web/Views/Shared/_ContactUs.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_ContactUs.cshtml
@@ -4,7 +4,7 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <div class="contact-heading">
                     <h2 class="title-one">Contact With Us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+                    @*<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>*@
                 </div>
             </div>
         </div>
@@ -15,7 +15,7 @@
             <div class="row text-center clearfix">
                 <div class="col-sm-6">
                     <div class="contact-address">
-                        <address><p>Rockaway WISH</p>@*<strong>36 North Kafrul<br>Dhaka Cantonment Area<br> Dhaka-1206, Bangladesh</strong><br><small>( Lorem ipsum dolor sit amet, consectetuer adipiscing elit )</small>*@</address>
+                        <address><p>Rockaway WISH</p><strong>533 Beach 126th St<br>Belle Harbor, NY 11694</strong><br><small>email: info@rockawaywish.org</small></address>
                         <div class="social-icons">
                             <a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
