--- a/source/RockawayWish.Web/Views/Shared/_Footer.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Footer.cshtml
@@ -1,7 +1,7 @@
 ﻿<footer id="footer">
     <div class="container">
         <div class="text-center">
-            <p>Copyright &copy; 2016 - Rockaway WISH LLC | All Rights Reserved</p>
+            <p>Copyright &copy; 2016 - WISH of Rockaway LLC | All Rights Reserved</p>
         </div>
     </div>
 </footer> <!--/#footer-->
