--- a/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_HomeCarousel.cshtml
@@ -9,7 +9,7 @@
             <li data-target="#main-carousel" data-slide-to="4"></li>
         </ol><!--/.carousel-indicators-->
         <div class="carousel-inner" style="text-shadow: 4px 4px #000;">
-            <div class=" item active" style="background-image: url(images/slider/slide1.jpg)">
+            <div class="item active" style="background-image: url(images/slider/slide1.jpg)">
             @*<div style="padding: 20px; position: absolute; z-index: 100; color: #fff; font-size: 100px; font-weight: bold; left: 100px; top: 175px;">
                 <div class="animated bounceInLeft" style="letter-spacing: 15px;"><span style="color: pink">W</span><span style="font-size: 50px;">omen</span></div>
                 <div class="animated bounceInLeft" style="padding-left: 10px">I</div>
@@ -36,7 +36,8 @@
                     <div>
                         <h2 class="heading animated bounceInDown" style="text-shadow: 3px 3px #000">Women</h2><br />
                         @*<h2 class="heading animated bounceInDown" style="text-shadow: 3px 3px #000">NYC Marathon</h2>*@
-                        <p class="animated bounceInUp" style="text-shadow: 2px 2px #000;">Would you like to run the 2016 NYC marathon? Come on ladies!</p> 
+                        <p class="animated bounceInUp" style="text-shadow: 2px 2px #000;">Would you like to run the 2016 NYC marathon?</p>
+                        <p class="animated bounceInDown" style="text-shadow: 2px 2px #000;">Come on ladies!</p>
                         <a class="btn btn-default slider-btn animated fadeIn" style="text-shadow: 2px 2px #000;" href="#contact">Contact Us</a>
                     </div>
                 </div>
@@ -67,7 +68,7 @@
                 <div class="carousel-caption">
                 <div>
                     <h2 class="heading animated bounceInRight" style="text-shadow: 3px 3px #000;">Support</h2><br />
-                    @*<p class="animated bounceInLeft">100% Responsive HTML template</p>*@
+                    <p class="animated bounceInUp" style="text-shadow: 2px 2px #000;">Would you like to donate?</p>
                     <a class="btn btn-default slider-btn animated bounceInUp" style="text-shadow: 2px 2px #000;" href="#">Donate</a>
                 </div>
             </div>
