--- a/source/RockawayWish.Web/Views/Shared/_Footer.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Footer.cshtml
@@ -1,7 +1,10 @@
 ﻿<footer id="footer">
     <div class="container">
-        <div class="text-center">
-            <p>Copyright &copy; 2016 - WISH of Rockaway LLC | All Rights Reserved</p>
+        <div class="text-center social-icons">
+            <p>
+                Copyright &copy; 2016 - WISH of Rockaway LLC | All Rights Reserved
+                <a href="https://twitter.com/RockawayWISH" target="_blank"><i class="fa fa-twitter"></i></a>
+            </p>
         </div>
     </div>
 </footer> <!--/#footer-->
