--- a/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <script src="js/respond.min.js"></script> <![endif]-->
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="@Url.Content("~/images/ico/apple-touch-icon-144-precomposed.png")">
-    ><link rel="apple-touch-icon-precomposed" sizes="114x114" href="@Url.Content("~/images/ico/apple-touch-icon-114-precomposed.png")">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="@Url.Content("~/images/ico/apple-touch-icon-114-precomposed.png")">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="@Url.Content("~/images/ico/apple-touch-icon-72-precomposed.png")">
     <link rel="apple-touch-icon-precomposed" href="@Url.Content("~/images/ico/apple-touch-icon-57-precomposed.png")">
     @*@Styles.Render("~/css")
