--- a/source/RockawayWish.Web/css/main.css
+++ b/source/RockawayWish.Web/css/main.css
@@ -456,11 +456,11 @@ h1, h2, h3, h4, h5, h6 {
 	color: #666666;
 	display: inline-block;
 	font-size: 32px;
-	font-weight: 600;
 	padding-bottom:10px;
 	text-align: center;
 	text-transform: uppercase;
-	position:relative
+	position:relative;
+    margin-top: 50px;
 }
 
 .title-one:after {
@@ -1209,9 +1209,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .social-icons a {
-	color: #A2A2A2;
+	color: #FE99CC;
 	font-size: 20px;
-	border: 1px solid #A2A2A2;
+	border: 1px solid #FE99CC;
 	border-radius: 50%;
 	text-align: center;
 	padding: 6px;
@@ -1219,6 +1219,7 @@ h1, h2, h3, h4, h5, h6 {
 	height: 44px;
 	display: inline-block;
 	margin: 2px;
+
 }
 
 
