--- a/source/RockawayWish.Web/Views/Shared/_Footer.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Footer.cshtml
@@ -3,6 +3,7 @@
         <div class="text-center social-icons">
             <p>
                 Copyright &copy; 2016 - WISH of Rockaway LLC | All Rights Reserved
+                <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank" style="margin-left: 50px;"><i class="fa fa-facebook"></i></a>
                 <a href="https://twitter.com/RockawayWISH" target="_blank"><i class="fa fa-twitter"></i></a>
             </p>
         </div>
