--- a/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
@@ -49,25 +49,19 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        @*<li class="scroll active"><a href="#navigation">Home</a></li>*@
                         <li><a href="@Url.Content("~/home")">Home</a></li>
-                        @*<li class="scroll"><a href="#about-us">About Us</a></li>*@
                         <li><a href="@Url.Content("~/home/about")">About Us</a></li>
                         <li><a href="@Url.Content("~/home/donate")">Donate</a></li>
-                        @*<li class="scroll"><a href="#services">Services</a></li>*@
-                        @*<li class="scroll"><a href="#portfolio">Portfolio</a></li>*@
-                        @*<li class="scroll"><a href="#clients">Clients</a></li>*@
-                        @*<li class="scroll"><a href="#blog">Blog</a></li>*@
-                        @*<li class="scroll"><a href="#contact">Contact</a></li>*@
                         <li><a href="@Url.Content("~/home/contact")">Contact Us</a></li>
+
                         @if (!Request.IsAuthenticated)
                         { 
-                        <li><a href="@Url.Content("~/account/register")">Join WISH!</a></li>
-                        <li><a href="@Url.Content("~/account/login")">Sign In</a></li>
+                            <li><a href="@Url.Content("~/account/register")">Join WISH!</a></li>
+                            <li><a href="@Url.Content("~/account/login")">Sign In</a></li>
                         }
                         else
                         {
-                            <li><a href="@Url.Content("~/account/profile")">Member Profile</a></li>
+                            <li><a href="@Url.Content("~/members")">Members</a></li>
                             <li><a href="@Url.Content("~/account/signout")">Sign Out</a></li>
                         }
                     </ul>
