--- a/source/RockawayWish.Web/Views/Members/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Members/Index.cshtml
@@ -7,6 +7,9 @@
                 <p> We welcome you to the WISH of Rockaway group with much love. I hope you would work for the motive of the group as much as other members and save our coummunity.</p>
                 <br />
                 <p>
+                    <a href="@Url.Content("~/members/info")">Profile Information</a>
+                </p>
+                <p>
                     <a href="@Url.Content("~/members/payments")">Dues and payments</a>
                 </p>
             </div>
