--- a/source/RockawayWish.Web/Views/Members/Payments.cshtml
+++ b/source/RockawayWish.Web/Views/Members/Payments.cshtml
@@ -78,7 +78,15 @@
                         {
                             <p style="padding: 10px; color: #ff0000; font-weight: bold;">No payments.</p>
                     
-                            <p>@Html.ActionLink("Make Payment", "Create", new { appId = Model.ApplicationId, userId = Model.UserId, paymentId = new Guid(duesId), paymentTypeId = 1 }, new { @class = "btn btn-primary" })</p>
+                            @*<p>@Html.ActionLink("Make Payment", "Create", new { appId = Model.ApplicationId, userId = Model.UserId, paymentId = new Guid(duesId), paymentTypeId = 1 }, new { @class = "btn btn-primary" })</p>*@
+                <p>
+                      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="434AZPJHHTFH4">
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form></p>
+
                         }
                     }
                 }
@@ -86,6 +94,7 @@
                 {
                     <p style="padding: 10px; color: #ff0000; font-weight: bold;">No dues have been applied.</p>
                     @*<p style="padding-left: 40px;">+ @Html.ActionLink("Add dues to user", "Create", "UserDues", new { appId = Model.ApplicationId, userId = Model.UserId }, null)</p>*@
+ 
                 }
 
 
